--- a/styles/globals.css
+++ b/styles/globals.css
@@ -692,6 +692,18 @@ button:disabled {
     .md\:hidden {
         display: none;
     }
+    .md\:flex-row-reverse {
+        flex-direction: row-reverse;
+    }
+    .md\:w-1\/3 {
+        width: 33.333333%;
+    }
+    .md\:w-2\/5 {
+        width: 40%;
+    }
+    .md\:max-h-\[calc\(100vh-100px\)\] {
+        max-height: calc(100vh - 100px);
+    }
     /* --- END OF ADDITION --- */
 }
 
